--- a/220303_test.html
+++ b/220303_test.html
@@ -1,15 +1,20 @@
-<html> 
-  <head> 
-    <script src="jquery.js"></script> 
-    <script> 
-    $(function(){
-      $("#includedContent").load("import/220303_leaflet_test.html"); 
-    });
-    </script> 
-  </head> 
- 
-  <body>
-     <h1> Hello World!</h1>
-     <div id="includedContent"></div>
-  </body> 
+<!DOCTYPE HTML>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Insert title here</title>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script type="text/javascript">
+      $(document).ready(function(){
+         $("#header").load("220303_leaflet_test.html")
+      });
+</script>    
+</head>
+
+<body>
+	<h1>before</h1>
+    <div id="header"><h1>include</h1></div>
+</body>
+
+
 </html>
