--- a/220303_test.html
+++ b/220303_test.html
@@ -3,18 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Insert title here</title>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script type="text/javascript">
-      $(document).ready(function(){
-         $("#header").load("220303_leaflet_test.html")
-      });
-</script>    
 </head>
 
 <body>
 	<h1>before</h1>
 	<p> This is a test page. </p>
-	<div id="header"><h1>include</h1></div>
+	<div w3-include-html="import/220303_leaflet_test.html"></div>
 </body>
 
 
