--- a/220303_test.html
+++ b/220303_test.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
+<title> HTML include </title>
 </head>
 
 <body>
-	<h1>Please</h1>
+	<h1> Please. </h1>
 	<p> This is a test page. </p>
 	<div w3-include-html="import/220303_leaflet_test.html"></div>
 </body>
