--- a/220303_test.html
+++ b/220303_test.html
@@ -1,14 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<link rel="import" href="import/220303_leaflet_test.html">
 <title> HTML include </title>
 </head>
 
 <body>
 	<h1> Please. </h1>
 	<p> This is a test page. </p>
-	<div w3-include-html="import/220303_leaflet_test.html"></div>
 </body>
 
 
