--- a/220303_test.html
+++ b/220303_test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link rel="import" href="import/220303_leaflet_test.html">
+<iframe src="import/220303_leaflet_test.html"></iframe>
 <title> HTML include </title>
 </head>
 
