--- a/220303_test.html
+++ b/220303_test.html
@@ -7,7 +7,10 @@
 <body>
 	<h1> Please. </h1>
 	<p> Success1. </p>
-	<iframe src="import/220303_leaflet_test.html"></iframe>
+	<iframe src="import/220303_leaflet_test.html"
+		onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"
+		>
+	</iframe>
 </body>
 
 
