--- a/220303_test.html
+++ b/220303_test.html
@@ -7,10 +7,26 @@
 <body>
 	<h1> Please. </h1>
 	<p> Success2. </p>
-	<iframe src="import/220302_leaflet_test.html"
-		onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"
-		>
-	</iframe>
+	 <div data-include-path="import/220302_leaflet_test.html"></div>
+    <script>
+        window.addEventListener('load', function() {
+            var allElements = document.getElementsByTagName('*');
+            Array.prototype.forEach.call(allElements, function(el) {
+                var includePath = el.dataset.includePath;
+                if (includePath) {
+                    var xhttp = new XMLHttpRequest();
+                    xhttp.onreadystatechange = function () {
+                        if (this.readyState == 4 && this.status == 200) {
+                            el.outerHTML = this.responseText;
+                        }
+                    };
+                    xhttp.open('GET', includePath, true);
+                    xhttp.send();
+                }
+            });
+        });
+ 
+    </script>
 </body>
 
 
