--- a/220303_test.html
+++ b/220303_test.html
@@ -2,31 +2,18 @@
 <html>
 <head>
 <title> HTML include </title>
+	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript">   
+		$(document).ready( function() {
+			$("#footers").load("import/220302_leaflet_test.html");  // 추가 인클루드를 원할 경우 이런식으로 추가하면 된다
+			});
+	</script>
 </head>
 
 <body>
 	<h1> Please. </h1>
 	<p> Success2. </p>
-	 <div data-include-path="import/220302_leaflet_test.html"></div>
-    <script>
-        window.addEventListener('load', function() {
-            var allElements = document.getElementsByTagName('*');
-            Array.prototype.forEach.call(allElements, function(el) {
-                var includePath = el.dataset.includePath;
-                if (includePath) {
-                    var xhttp = new XMLHttpRequest();
-                    xhttp.onreadystatechange = function () {
-                        if (this.readyState == 4 && this.status == 200) {
-                            el.outerHTML = this.responseText;
-                        }
-                    };
-                    xhttp.open('GET', includePath, true);
-                    xhttp.send();
-                }
-            });
-        });
- 
-    </script>
+	<div id="footers"></div>
 </body>
 
 
