--- a/220303_test.html
+++ b/220303_test.html
@@ -1,6 +1,13 @@
 <html>
   <head>
     <object type="text/html" data="import/220302_leaflet_test.html"></object> 
+    <style>
+        object {
+            border: 3px solid orange;
+            width: 750px;
+            height: 750px;
+        }
+    </style>
   </head>
 
   <body>
