--- a/220303_test.html
+++ b/220303_test.html
@@ -3,9 +3,9 @@
     <object type="text/html" data="import/220302_leaflet_test.html"></object> 
     <style>
         object {
-            border: 3px solid orange;
-            width: 750px;
-            height: 750px;
+            border: 3px solid grey;
+            width: 1200px;
+            height: 800px;
         }
     </style>
   </head>
