--- a/220303_test.html
+++ b/220303_test.html
@@ -4,13 +4,17 @@
     <style>
         object {
             border: 3px solid grey;
-            width: 1200px;
-            height: 800px;
+            width: 60%;
+            height: 80%;
+            padding: 0px;
         }
+        
     </style>
   </head>
 
-  <body>
+  <body bgcolor="grey">
      <div id="includedContent"></div>
+     <p><img src="pic/청주지속협로고(영문).png"
+        style="float: right; width: 350px;"/></p>
   </body>
 </html>
