--- a/220303_test.html
+++ b/220303_test.html
@@ -4,15 +4,15 @@
     <style>
         object {
             border: 3px solid grey;
-            width: 60%;
-            height: 80%;
+            width: 80%;
+            height: 90%;
             padding: 0px;
         }
         
     </style>
   </head>
 
-  <body bgcolor="grey">
+  <body background="pic/background.png">
      <div id="includedContent"></div>
      <p><img src="pic/청주지속협로고(영문).png"
         style="float: right; width: 350px;"/></p>
