--- a/220303_test.html
+++ b/220303_test.html
@@ -12,7 +12,7 @@
     </style>
   </head>
 
-  <body background="pic/background.png">
+  <body background="pic/background3.png">
      <div id="includedContent"></div>
      <p><img src="pic/청주지속협로고(영문).png"
         style="float: right; width: 350px;"/></p>
