--- a/220303_test.html
+++ b/220303_test.html
@@ -8,8 +8,8 @@
             height: 90%;
             padding: 0px;
         }
-        
     </style>
+    <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body background="pic/background3.png">
