--- a/220303_test.html
+++ b/220303_test.html
@@ -3,7 +3,7 @@
     <object type="text/html" data="import/220302_leaflet_test.html"></object> 
     <style>
         object {
-            border: 3px solid grey;
+            border: 3px solid #0B0B3B;
             width: 80%;
             height: 90%;
             padding: 0px;
