--- a/220303_test.html
+++ b/220303_test.html
@@ -9,12 +9,29 @@
             padding: 0px;
         }
     </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Gugi&family=Nanum+Pen+Script&display=swap');
+        p{
+          margin-left: 20%;
+          font-family: 'Gugi', cursive;
+        }
+        .a{
+          margin-left: 82%;
+          margin-top: -40%;
+          font-family: 'Nanum Pen Script', cursive;
+        }
+    </style>
     <link rel="stylesheet" href="css/main.css">
   </head>
-
   <body background="pic/background3.png">
      <div id="includedContent"></div>
      <p><img src="pic/청주지속협로고(영문).png"
         style="float: right; width: 350px;"/></p>
+     <p><span style="border-radius: 125px 125px 125px 0; background: linear-gradient(to right, #0B610B, #4C0B5F); padding: 0.5em 0.6em;">
+      <span style="font-size: 45px; color: #81F7F3; font-weight: bold;"> 재해없는 안전한 마을 만들기 </span></span></p>      
+     <p class="a"><span style="font-size: 140px; color: #FFFFFF; font-weight: bold;">
+       안전지도
+      </span>
+    </p>
   </body>
 </html>
