--- a/220303_test.html
+++ b/220303_test.html
@@ -28,8 +28,10 @@
      <p><img src="pic/청주지속협로고(영문).png"
         style="float: right; width: 350px;"/></p>
      <p><span style="border-radius: 125px 125px 125px 0; background: linear-gradient(to right, #0B610B, #4C0B5F); padding: 0.5em 0.6em;">
-      <span style="font-size: 45px; color: #81F7F3; font-weight: bold;"> 재해없는 안전한 마을 만들기 </span></span></p>      
-     <p class="a"><span style="font-size: 140px; color: #FFFFFF; font-weight: bold;">
+      <span style="font-size: 45px; color: #81F7F3; font-weight: bold;text-shadow: -2px 0 #000, 0 2px #000, 2px 0 #000, 0 -2px #000;">
+         재해없는 안전한 마을 만들기 </span></span></p>      
+     <p class="a"><span style="font-size: 140px; color: #FFFFFF; font-weight: bold;
+      text-shadow: -2px 0 #000, 0 2px #000, 2px 0 #000, 0 -2px #000;">
        안전지도
       </span>
     </p>
