--- a/220303_test.html
+++ b/220303_test.html
@@ -30,7 +30,7 @@
      <p><span style="border-radius: 125px 125px 125px 0; background: linear-gradient(to right, #0B610B, #4C0B5F); padding: 0.5em 0.6em;">
       <span style="font-size: 45px; color: #81F7F3; font-weight: bold;text-shadow: -2px 0 #000, 0 2px #000, 2px 0 #000, 0 -2px #000;">
          재해없는 안전한 마을 만들기 </span></span></p>      
-     <p class="a"><span style="font-size: 140px; color: #FFFFFF; font-weight: bold;
+     <p class="a"><span style="font-size: 7em; color: #FFFFFF; font-weight: bold;
       text-shadow: -2px 0 #000, 0 2px #000, 2px 0 #000, 0 -2px #000;">
        안전지도
       </span>
