--- a/220303_test.html
+++ b/220303_test.html
@@ -5,17 +5,19 @@
         object {
             border: 3px solid #0B0B3B;
             width: 80%;
-            height: 90%;
+            height: 85%;
             padding: 0px;
         }
     </style>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Gugi&family=Nanum+Pen+Script&display=swap');
         p{
+          position: relative;
           margin-left: 10%;
           font-family: 'Gugi', cursive;
         }
         .a{
+          position: relative;
           margin-left: 82%;
           margin-top: -40%;
           font-family: 'Nanum Pen Script', cursive;
