--- a/220303_test.html
+++ b/220303_test.html
@@ -30,9 +30,9 @@
      <p><img src="pic/청주지속협로고(영문).png"
         style="float: right; width: 350px; margin-right: 2%;"/></p>
      <p><span style="border-radius: 125px 125px 125px 0; background: linear-gradient(to right, #0B610B, #4C0B5F); padding: 0.5em 0.6em;">
-      <span style="font-size: 350%; color: #F2F5A9; font-weight: bold;text-shadow: -2px 0 #000, 0 2px #000, 2px 0 #000, 0 -2px #000;">
+      <span style="font-size: 75px; color: #F2F5A9; font-weight: bold;text-shadow: -2px 0 #000, 0 2px #000, 2px 0 #000, 0 -2px #000;">
          재해없는 안전한 마을 만들기 </span></span></p>      
-     <p class="a"><span style="font-size: 750%; color: #FFFFFF; font-weight: bold;
+     <p class="a"><span style="font-size: 110px; color: #FFFFFF; font-weight: bold;
       text-shadow: -2px 0 #000, 0 2px #000, 2px 0 #000, 0 -2px #000;">
        안전지도
       </span>
