--- a/220303_test.html
+++ b/220303_test.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>안전지도</title>
     <object type="text/html" data="import/220304_leaflet.html"></object> 
     <style>
         object {
